# ChangeLog for net-p2p/qbittorrent
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.147 2011/04/08 07:52:10 hwoarang Exp $

  08 Apr 2011; Markos Chandras <hwoarang@gentoo.org> qbittorrent-2.7.2.ebuild,
  qbittorrent-9999.ebuild:
  Remove libnotify. Has been replaced with qt-dbus API. Bug #362423

*qbittorrent-2.7.2 (06 Apr 2011)

  06 Apr 2011; Markos Chandras <hwoarang@gentoo.org> -qbittorrent-2.7.1.ebuild,
  +qbittorrent-2.7.2.ebuild:
  Version bump

*qbittorrent-2.7.1 (01 Apr 2011)

  01 Apr 2011; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.4.11.ebuild, -qbittorrent-2.6.9.ebuild,
  -qbittorrent-2.7.0.ebuild, +qbittorrent-2.7.1.ebuild:
  Version bump. Remove old ebuilds

*qbittorrent-2.7.0 (22 Mar 2011)
*qbittorrent-2.6.9 (22 Mar 2011)

  22 Mar 2011; Markos Chandras <hwoarang@gentoo.org> -qbittorrent-2.6.7.ebuild,
  -qbittorrent-2.6.8.ebuild, +qbittorrent-2.6.9.ebuild,
  -qbittorrent-2.7.0_beta2.ebuild, -qbittorrent-2.7.0_beta4.ebuild,
  +qbittorrent-2.7.0.ebuild:
  Version bump. Remove old ebuilds

*qbittorrent-2.7.0_beta4 (13 Mar 2011)
*qbittorrent-2.6.8 (13 Mar 2011)

  13 Mar 2011; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-2.6.8.ebuild,
  +qbittorrent-2.7.0_beta4.ebuild:
  Version bump and new snapshot

  04 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  qbittorrent-2.7.0_beta2.ebuild, qbittorrent-9999.ebuild:
  Use stricter Qt dependencies

*qbittorrent-2.7.0_beta2 (27 Feb 2011)
*qbittorrent-2.6.7 (27 Feb 2011)

  27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> -qbittorrent-2.6.6.ebuild,
  +qbittorrent-2.6.7.ebuild, -qbittorrent-2.7.0_beta1.ebuild,
  +qbittorrent-2.7.0_beta2.ebuild:
  Version bump. Remove old. New snapshot

  14 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  qbittorrent-2.5.5.ebuild:
  x86 stable wrt bug #354517

  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> qbittorrent-2.5.5.ebuild: