@@ -4,26 +4,28 @@ Hash: SHA512
 DIST qbittorrent-2.2.11.tar.gz 2727964 RMD160 96e81471d0993c068b3b87c13ffa7b1d7d6ef3f2 SHA1 ef6c267acb3ff5b2a1c5951b2e6de88ce9b1f7ef SHA256 20a8b1c403048da89d73ce59ac95a8f2ffe2777c97f8f23bded63ac0027794d7
 DIST qbittorrent-2.5.5.tar.gz 2819850 RMD160 b91d9ed0a355d87dbb5d0304026ad11af1e833ef SHA1 1bc5031887f80a5b3316a58bac9318e05fb69b3d SHA256 4a061bad1c9b4fd1a21508718a14c69fe9f03a85b19ee343bc18d187af380359
 DIST qbittorrent-2.7.2.tar.gz 3157190 RMD160 dc3cdb524e864eff4cb934a7e606476c118ad885 SHA1 fdfec52385187d9895981aeb68b9081b6789362f SHA256 1e2f802c03350b19ef6610fc2048683fb22a46e7ef6638335855f516465b639c
+DIST qbittorrent-2.8.0beta1.tar.gz 3164611 RMD160 e151feef3bfeeeacd62467689f0c1400adf8bc24 SHA1 9260e3642854796ea2f1b24d12a93464d0ffe03d SHA256 10114cc65180e9a31a611defd3708aee0818e9e5e4746280c702e598d440a11b
 EBUILD qbittorrent-2.2.11.ebuild 1681 RMD160 d9bc680590ce1751d5411b51aa82fec4c714195a SHA1 4884f7865d99778ba01835275022541ebfa4ca26 SHA256 cadc4893aff16dad7e93693bd9707ab1f7e61924b24dd357aa82fc8701237a82
 EBUILD qbittorrent-2.5.5.ebuild 1747 RMD160 dd3af21cf1dfe296683f9c28703ac004df722886 SHA1 6291a1f1482c20b0ef517686af14862bdc98ae30 SHA256 4395f0944f9a51fd6ec0bf04366b5379845da8ebf3f193b2f60ee5d2a2787fce
 EBUILD qbittorrent-2.7.2.ebuild 1675 RMD160 c9114941d367e1b6ace0404e8e5b169bf3716722 SHA1 5d4dcea6829f137b3f4ade71f08f825d92d7b3b4 SHA256 1459ca078722a7045680271a3a4a1c645a9910720932fae24617e164c936a6f0
+EBUILD qbittorrent-2.8.0_beta1.ebuild 1681 RMD160 e84a96313c4cfd58fb21cdc92c906dea0dcecd2e SHA1 445a8b5f89b42f6d1451f0dc21817615ef45aadf SHA256 74c664b02eaef6df0c7397c0f370ff659e393705b5ea30697e0e1450d0fb7ba5
 EBUILD qbittorrent-9999.ebuild 1668 RMD160 69be24b699863765ca3285d882f050d4a42bd670 SHA1 d356e66b1809b19074388756c80b28d44640c50e SHA256 7492aad364035b5012bd3fb9e4003fc7bd534984fba0bfea4c77fa7993111ee8
-MISC ChangeLog 25912 RMD160 b77ec588fa44f11ae08c0e0c799090a356ce8055 SHA1 bfc49033f8d0ded7555e44ad4fe8fdb538222103 SHA256 dc88d2494e79ca28db55837a865cdac9c9afb239f9629c533b7c05939c4d9a30
+MISC ChangeLog 26056 RMD160 6fb88937b689a43e09f1709b2ae278ef2867c08a SHA1 ab0f4f02a8d5f01c5616fa8c884f0441fbebcbf1 SHA256 ebc9c9ee3aa78f59eaae17f70a4ffe9d7fd83b9a6bf2bf415ce5a88e7a60ecf5
 MISC metadata.xml 280 RMD160 25c947a1034c150a136911351c7da9ed8783ee44 SHA1 17a16b5a0ddc3de88d81a1493cd5cb4c1aa795aa SHA256 07e3116f2c52c06760e21dc1b8bd3b318b7d9a140fb1b8942736aedd0d750b73
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJNnrAfAAoJEPqDWhW0r/LCdHwP/1KdqSkg7PKN7yMq5KgNNJyL
-gguLj9aP+BFAW/NEUZU6PDtME6q9akQtii4b9p8ZsJVo5uR9JwR6PtlxDhDRjZo3
-1mPdcjv58neWHUazrKdH8tyysE5h6dYdh7/1mqmFZ265816BqJp4JZjod36RygaO
-jNOAU4S62HZHkYiYocTTGrmuKSVrTEW4LAe10G29aQ/0FPqlymjs9iIpcHApF50x
-BF+YitJeoWHSV6DCj5X6j/ZM/e4uVMPmp1gMV8YCY1tZuaOI82noBVkrZJURMvGV
-Ok80cRo4ElUm8TP6aLjAsiaLknLchhsntaEc4tQlL2YlArmpENI/j5FgzRbGOrmh
-4hLL7gMM9bqZaN4YxPNs57LBKx26NidnAI5ICSnr5pZ388TL63x4c/zuHb/aaBqA
-OSrsUzTPU2oigP6XFAtxFQlUqte0J2gXcF80NbeHiHX1fjEq/pIj78fMXcD0Mwgj
-cw5GQrYdkNK8aVAQAgwmnp+SOpjZtD66q6+JpoWEyWQKrqBZQnKpY6O6EToxmGji
-paosUM9C3CIDmSu1qFZIIjL3iO9DYF22HT02O7HOrXLPFjTLEjKCJT767xwTU7Ta
-AhI5IXBtYgxKcyyNVqpFWT1hHrN+2SaE4cztX6iHSiLNsMquAdBlxXhFWM5vJ6Wp
-Az/xMn1OaiiILpkoajds
-=fKa+
+iQIcBAEBCgAGBQJNoWOEAAoJEPqDWhW0r/LCR+gP/3Hd4N8nOGftBE0bEUisusGC
+Y2CCS5RSvHKhdeQv8RHW+0v0AjIM4p1VImx7N+KhKJo8mZXfAMJJDf8p6XnzKDso
+5iINeOv6LrmCE1G8ZOBftzw6/x34csw0bK3DYBnr2pE9ogyC3ZAEDECKkLCT4Vnf
+PytHppmM15IDu+b4cTVHTbFgh8/RpItvSY2WJY79yum/cBwzrvOQSWOnOd5crK0U
+HOR5RWqEWySvst+0puufyul2LAiPWumr429IwersZlFnXTe3nykC0HMuSxMY7dZW
+teZ3PL9x/GTEo/Zio+bIYYpnBWWEMY9Z3iG2WJDDzJ5JjSVqtmt01Sxsekr4iWi4
+t3xhU2WyWihyjhsJp56x+PNYfePSL5T7dbTauP3XqJmXuDqT1r+ojkxiS5lgh0/f
+CucgiCBtUXhH10iWBwMXamihjgWAQgLR5HPCu2JBhp3NDzEgamvfjpMoDROFauNv
+Ekm4H14oJ5CYG2AB+oCrJ9guIjTkxyAlkm7iG+uiyaf9UUbSpEkeJpffnl+t4p7+
+tpqZATdMNNtjDDRooAIE+zDQsIDoQPH2UrvEdeQnaYzfFLDDgGLmss673Ecg77Qu
+7arQ0rREJu70Fv1BzyCV2xbqpbRyc1Sp+QK4tspADbTTOo9EOd5nGfqK0VpXQh25
+/c7pFm/3kTkIl3azPAvE
+=1zZf
 -----END PGP SIGNATURE-----
