@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/qbittorrent
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.147 2011/04/08 07:52:10 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.148 2011/04/10 09:02:48 hwoarang Exp $
+
+*qbittorrent-2.8.0_beta1 (10 Apr 2011)
+
+  10 Apr 2011; Markos Chandras <hwoarang@gentoo.org>
+  +qbittorrent-2.8.0_beta1.ebuild:
+  Version bump
 
   08 Apr 2011; Markos Chandras <hwoarang@gentoo.org> qbittorrent-2.7.2.ebuild,
   qbittorrent-9999.ebuild:
